FIX TEXT ALIGN IN MOBILE

--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -98,11 +98,13 @@
     .whoTitleContainer h2 {
       font-size: 32px;
       line-height: 1.2;
+      text-align: left;
     }
   
     .whoDescription {
       font-size: 14px;
       line-height: 1.7em;
+      text-align: left;
     }
   }
   
